# tries

./: .gitignore  CMakeLists.txt  Makefile  b_trie_lpm.h  binary_tree.cpp  binary_trie.cpp  compile_commands.json  consumption.txt  diplom_trie.h  dpdksuperss.txt  main  main.cpp  patricia_trie.h  res.txt  supress.txt
helpers/: ipcreator.h  ipsaver.h  logger.h
test/: dir24_8_lpmv4_perf.h  full_cover_multibit_test.h  lpm6_data.h  test_b_trie.h  test_fx_trie.h
tries/: FST.h  OMAR_dpdk_lpm6.c  OMAR_dpdk_lpm6.h  art_lookup.h  b_trie_lpm.h  fix_stride_trie.h  multibit_dpdk.c  multibit_dpdk.h  patricia_trie.h  ptrie_algo.org
tries/fib6/: OMAR_dpdk_fib6.c  OMAR_dpdk_fib6.h  omar_dir24_8.c  rte_fib.c  trie.c  trie_avx512.c
